--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "puppeteer": "^1.18.1",
+    "sequelize": "^5.10.2",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
