--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/pubsub": "^0.30.3",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "filenamify": "^4.1.0",
     "helmet": "^3.15.0",
     "minimist": "^1.2.0",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "puppeteer": "^1.18.1",
